# pytils

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CHANGELOG.md  Changelog  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.html  README.md  TODO  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  ty.toml
.github/workflows/: test.yml
doc/: INSTALL  INSTALL.rus.txt  README.rus.txt  WEBFRAMEWORKS.rus.txt
doc/examples/: dt.distance_of_time_in_words.py  dt.ru_strftime.py  numeral.choose_plural.py  numeral.in_words.py  numeral.rubles.py  numeral.sum_string.py  test.py  translit.py
doc/examples-django/: README
doc/examples-django/pytilsex/: __init__.py  pytilsex.db  settings.py  tests.py  urls.py
doc/examples-django/pytilsex/templates/: base.html  dt.html  numeral.html  translit.html
doc/examples-turbogears/: README  dev.cfg  setup.py  start-pytilsex.py
doc/examples-turbogears/pytilsex/: __init__.py  controllers.py  model.py
doc/examples-turbogears/pytilsex/config/: app.cfg
doc/examples-turbogears/pytilsex/templates/: dt.kid  master.kid  numeral.kid  root.kid  translit.kid
pytils/: __init__.py  dt.py  err.py  numeral.py  translit.py  typo.py  utils.py
pytils/templatetags/: __init__.py  pytils_dt.py  pytils_numeral.py  pytils_translit.py  pytils_typography.py
pytils/test/: __init__.py  test_dt.py  test_numeral.py  test_translit.py  test_typo.py  test_utils.py
pytils/test/templatetags/: __init__.py  helpers.py  test_common.py  test_dt.py  test_numeral.py  test_translit.py
pytils/third/: aspn426123.py
(+2 files in other folders)
